fix! fix and update code issue